# fosco

./: .gitignore  README.md  example_sin.py  pyproject.toml  requirements.txt  run_example.py  run_example_multiagent.py  tutorial_uncertainty convex_hull.ipynb
barriers/: __init__.py  double_integrator.py  single_integrator.py
docs/: code-structure.md
examples/: run_barrierpolicy_singleintegrator.py  run_barrierpolicy_unicycle.py  run_batched_simulation_env.py  run_example_static_office.py  run_train_ppo_singleintegrator.py  run_verify_cbf_double_integrator.py  run_verify_cbf_single_integrator.py  run_verify_rcbf_hull_single_integrator.py  run_verify_rcbf_parametric_single_integrator.py  run_verify_rcbf_single_integrator.py  tutorial_uncertainty.ipynb  tutorial_uncertainty_additive.ipynb  tutorial_uncertainty_convex_hull.ipynb
fosco/: cegis.py  config.py  consolidator.py  learner.py  translator.py  verifier.py
logger/: __init__.py  logger.py  logger_aim.py  logger_text.py
models/: cbf_agent.py  module.py  network.py  policy.py  ppo_agent.py  td3_agent.py  torchsym.py
rl_algorithms/: buffer.py  cbfagent_trainer.py  cbfrl.py  ppo.py  ppo_trainer.py  rl_trainer.py  td3.py  td3_trainer.py  utils.py
rl_trainer/: run_ppo.py  run_td3.py  trainer.py
scripts/: install_dreal.sh
systems/: __init__.py  double_integrator.py  office.py  rewards.py  single_integrator.py  static_office.py  system.py  system_env.py  system_from_spec.py  uncertainty_wrappers.py  unicycle_acc_model.py  unicycle_model.py  utils.py
tests/: test_activations.py  test_barriers.py  test_env.py  (+14 more)
(+97 files in other folders)
